# yt-music-companion

./: .gitignore  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  release.yml
app/: .gitignore  Cargo.toml  README.md
app/bridge-cli/: Cargo.toml
app/bridge-cli/src/: main.rs
app/bridge-core/: Cargo.toml
app/bridge-core/src/: auth.rs  board_server.rs  bridge.rs  commands.rs  config.rs  cover.rs  discovery.rs  lib.rs  normalize.rs  state.rs  ytmd.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/ui/: index.html  main.js  styles.css
bridge/: .gitignore  README.md  WINDOWS-SETUP.md  package-lock.json  package.json
bridge/src/: auth.js  board-server.js  config.js  cover.js  discovery.js  index.js  normalize.js  ytmd.js
design/now-playing-screen-design/: README.md
design/now-playing-screen-design/project/: .thumbnail  Now Playing v2.dc.html  Now Playing.dc.html  NowPlayingDevice.dc.html  NowPlayingDeviceV2.dc.html
design/youtube-music-companion-landing-page/: README.md
design/youtube-music-companion-landing-page/project/: .thumbnail  Landing.dc.html  NowPlayingDevice.dc.html
docs/: CLAUDE-DESIGN-PROMPT.md  CONFIGURATION.md  HANDOFF.md  PROJECT-OVERVIEW.md  RUNNING.md  SPEC-ytmusic-adapter.md  SPEC-ytmusic-now-playing.md
docs/superpowers/plans/: 2026-06-30-ring-breath-animation.md  2026-06-30-runtime-brightness-and-battery.md  2026-07-01-auto-power-off-on-idle.md  2026-07-01-auto-screen-dim-on-idle.md  2026-07-02-boot-loader-connection-state.md  2026-07-08-web-installer.md  2026-07-09-auto-power-off-on-idle.md  2026-07-09-branch-t-part1-bridge-core.md  2026-07-09-branch-t-part2-tauri.md  2026-07-09-bridge-reauth-self-heal.md
docs/superpowers/specs/: 2026-06-30-ring-breath-animation-design.md  2026-06-30-runtime-brightness-and-battery-design.md  2026-07-01-auto-power-off-on-idle-design.md  2026-07-01-auto-screen-dim-on-idle-design.md  2026-07-01-boot-loader-connection-state-design.md  2026-07-01-landing-page-and-oss-release-design.md  2026-07-08-standalone-bridge-app-design.md  2026-07-08-web-installer-design.md  2026-07-09-auto-power-off-design.md  2026-07-09-bridge-reauth-self-heal-design.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  axp2101_decode.c  axp2101_decode.h  battery.c  battery.h  conn.c  conn.h  idf_component.yml  idle.c  idle.h  improv_serial.c  improv_serial.h  imu.c  imu.h  main.c  net_backend.c  net_backend.h  provisioning.c  provisioning.h  wifi_creds.c  wifi_creds.h
scripts/: check_marquee_perf.sh  gen_fonts.sh  gen_icons.sh
sim/: CMakeLists.txt  README.md  lv_conf.h  main_sim.c
site/: index.html
site/install/: README.md  index.html  manifest.json
spike/tauri-hello/: Cargo.toml  tauri.conf.json
spike/tauri-hello/icons/: icon.icns
spike/ytmd-rust/: Cargo.toml  README.md  rust-toolchain.toml
spike/ytmd-rust/src/: main.rs
tests/: CMakeLists.txt  test_ambient.c  test_battery.c  test_conn.c  test_idle.c  test_improv.c  test_palette.c  test_wifi_creds.c
ui/: ambient_glow.c  ambient_glow.h  ambient_paint.c  ambient_paint.h  inter_extrabold_12.c  inter_extrabold_13.c  inter_extrabold_29.c  inter_extrabold_33.c  inter_regular_12.c  inter_semibold_12.c  inter_semibold_13.c  inter_semibold_14.c  inter_semibold_15.c  inter_semibold_17.c  inter_semibold_19.c  mdi_line.c  mdi_solid.c  mock.c  mock.h  now_playing_screen.c  now_playing_screen.h  now_playing_vm.h  palette.c  palette.h  quick_panel.c  quick_panel.h  ring_visualizer.c  ring_visualizer.h  styles.h
