[workspace]
resolver = "2"
members = ["bridge-core", "bridge-cli"]

[workspace.package]
version = "1.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rust_socketio = { version = "0.6", features = ["async"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
mdns-sd = "0.13"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
