[package]
name = "bridge-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
rust_socketio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
mdns-sd.workspace = true
image.workspace = true
tracing.workspace = true
